--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>점심메뉴 룰렛</title>
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="LunchMenu - 점심 메뉴 룰렛" />
+  <meta property="og:description" content="간편하게 점심 메뉴를 랜덤으로 추천해주는 룰렛 앱" />
+  <meta property="og:image" content="/og_image.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lottoa.github.io/LunchMenu/" />
+
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#268bd2" />
+
   <style>
     body {
       margin: 0;
@@ -219,7 +231,7 @@
           ctx.fillStyle = "#FFD633";
           ctx.fill();
         } else {
-          ctx.fillStyle = `hsl(${(i * 360) / menuItems.length}, 70%, 70%)`;
+          ctx.fillStyle = `hsl(${(i * 360) / menuItems.length}, 70%, 70%`;
           ctx.fill();
           ctx.lineWidth = 1;
           ctx.strokeStyle = "#fff";
@@ -318,7 +330,6 @@
           currentRotation = targetRotation;
           highlightIndex = randomTarget;
           drawRoulette((currentRotation * Math.PI) / 180, highlightIndex);
-          // 팝업 표시
           popupText.textContent = `오늘의 메뉴: ${menuItems[highlightIndex]}`;
           popupOverlay.style.display = 'flex';
           launchPopupFireworks();
@@ -341,6 +352,13 @@
       highlightIndex = -1;
       drawRoulette((currentRotation * Math.PI) / 180);
     });
+
+    // Service Worker 등록
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js').catch(err => console.error('SW 등록 실패:', err));
+      });
+    }
   </script>
 </body>
 </html>
