--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lottoa.github.io/LunchMenu/" />
 
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.json" />
+  <!-- PWA Mainfest -->
+  <link rel="mainfest" href="mainfest.json" />
   <meta name="theme-color" content="#268bd2" />
 
   <style>
